# ccrxt

./: .cursorrules  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CREDENTIALS_MIGRATION_PLAN.md  Cargo.toml  REAL_API_BINDINGS.md  build.rs  build_fixed.rs  build_old.rs  claude_output.json  clippy.toml  deny.toml  pr_body.md  readme.md  rust-toolchain.toml  rustfmt.toml  test_kline_format.rs  test_real_bindings.py  x.md
mapper/: Cargo.toml
mapper/src/: binance.rs  bybit.rs  lib.rs  okx.rs
mapper/src/coinbase/: advanced_trade.rs  mod.rs
orderbook/: Cargo.toml
orderbook/examples/: binance_coinm_orderbook.rs  binance_spot_orderbook.rs  binance_usdm_orderbook.rs  bybit_orderbook.rs  okx_orderbook.rs
orderbook/examples/aggregated_orderbook/: config.json
orderbook/examples/multi_exchange_tui/: Cargo.toml
orderbook/examples/tui_orderbook/: Cargo.toml  mod.rs
orderbook/src/: aggregated.rs  lib.rs
python-bindings/: Cargo.toml  IMPLEMENTATION.md  README.md  SUCCESS.md  WORKING_PROOF.md  build.rs  build_fixed.rs  build_old.rs  demo.py  example_usage.py  pyproject.toml
python-bindings/python/ccrxt/: __init__.py
python-bindings/src/: lib.rs
rest/: Cargo.toml
rest/examples/: http_client_example.rs
rest/src/: client.rs  error.rs  http_client.rs  lib.rs  mod.rs  native.rs  rate_limiter.rs  request.rs  secrets.rs  wasm.rs
venues/: Cargo.toml  WASM_COMPATIBILITY_REPORT.md
venues/examples/: aggregated_orderbook.rs  aggregated_orderbook_spot.rs  aggregated_orderbook_swap.rs  binance_depth_cli.rs  binance_depth_stream.rs  binance_new_streams.rs  binance_orderbook_test.rs  binance_raw_debug.rs  binance_reconnection_example.rs  binance_spot_orderbook.rs  binance_spot_websocket.rs  binance_websocket_rate_limit.rs  bitget_futures_example.rs  gateio_options_example.rs  gateio_options_simple.rs  okx_orderbook.rs  test_kucoin_access.rs
venues/examples/aggregated_orderbook/: Cargo.toml
venues/examples/authenticated_websocket/: authenticated_websocket.rs
venues/examples/binance/: usdm_public_endpoints_example.rs  ws_new_order_example.rs
venues/examples/binancecoinm/: .env  Cargo.toml  README.md  main.rs
venues/examples/binanceoption/: Cargo.toml  README.md
venues/examples/binanceportfoliomargin/: Cargo.toml
venues/examples/bingx/: examples.rs  market_data_example.rs  public_rest_api_example.rs  symbols_example.rs
venues/examples/bitget/: bitget_futures_example.rs  bitget_public_example.rs  spot_trading_example.rs
venues/examples/bitmart/: futures_get_contract_details_example.rs  rest_api_example.rs  websocket_example.rs
venues/examples/bullish/: candles_example.rs  index_prices_example.rs  market_data_example.rs  public_markets_example.rs
venues/examples/coinbase/: coinbase_private_rest.rs  coinbase_public_rest.rs  usage_example.rs
venues/examples/coinbase_market_data/: coinbase_market_data.rs
venues/examples/coinbaseadvanced/: README.md  authenticated_websocket.rs  coinbase_market_data.rs
venues/examples/cryptocom/: rate_limit_example.rs
venues/examples/deribit/: get_block_rfq_trades.rs  rest_get_settlement_history_by_instrument_example.rs  unsubscribe_example.rs  usage_example.rs  websocket_subscribe.rs
venues/examples/gateio/: futures_trading_example.rs  gateio_options_example.rs  market_data.rs  private_trading.rs  spot_trading_example.rs
venues/examples/kucoin/: Cargo.toml  futures_example.rs  margin_credit_example.rs  margin_debit_example.rs  margin_market_example.rs  margin_order_example.rs  private_api_example.rs  public_api_example.rs  rate_limiter_example.rs  simple_private_example.rs  test_private.rs
venues/examples/okx/: get_instruments.rs  get_underlying.rs
venues/src/: error.rs  lib.rs  rate_limit_compat.rs  time_compat.rs  venue.rs
venues/src/binance/: README.md  mod.rs
venues/src/bingx/: README.md  credentials.rs  enums.rs  errors.rs  mod.rs  private_client.rs  public_client.rs  rate_limit.rs
venues/src/bitget/: credentials.rs  enums.rs  errors.rs  mod.rs  private_client.rs  public_client.rs  rate_limit.rs
venues/src/bitmart/: README.md  common.rs  endpoints.md  enums.rs  errors.rs  mod.rs  private_rest.rs  rate_limit.rs  readme.md
venues/src/bullish/: README.md  credentials.rs  enums.rs  errors.rs  integration_tests.rs  mod.rs  pagination.rs  private_client.rs  public_client.rs  rate_limit.rs  rate_limiter_trait.rs
venues/src/bybit/: enums.rs  errors.rs  mod.rs  private_client.rs  public_client.rs  rate_limit.rs  rate_limiter_trait.rs
venues/src/coinbase/: README.md  enums.rs  errors.rs  mod.rs  rate_limit.rs
venues/src/coinbaseexchange/: README.md  enums.rs  errors.rs  mod.rs  private_client.rs  public_client.rs  rate_limit.rs  rate_limiter_trait.rs
venues/src/common/: encryption.rs  mod.rs
venues/src/crypto_com/: errors.rs  examples.rs  integration_tests.rs  mod.rs  rate_limit.rs
venues/src/cryptocom/: README.md  credentials.rs  enums.rs  errors.rs  examples.rs  integration_tests.rs  lib.rs  message.rs  mod.rs  private_client.rs  private_rest_api.md  public_client.rs  public_rest_api.md  rate_limit.rs  rate_limiter_trait.rs
venues/src/deribit/: README.md  WEBSOCKET_IMPLEMENTATION_RECOMMENDATIONS.md  credentials.rs  enums.rs  errors.rs  examples.rs  integration_tests.rs  jsonrpc.rs  message.rs  mod.rs  private_client.rs  public.rs  public_client.rs  public_old.rs  rate_limit.rs  usage_example.rs  (+3 more)
venues/tests/: cryptocom_integration.rs  deribit_integration.rs
web-ui/: .gitignore  Cargo.toml  EXTENSION_README.md  README.md  Trunk.toml  background.js  build.rs  build.sh  create_icons.py  endpoints.json  final_fix.sh  fix_extension.sh  fix_html.sh  generate_icons.html  index.html  manifest.json
web-ui/src/: app.rs  endpoints.rs  extension_api.rs  lib.rs  main.rs  types.rs  utils.rs
websockets/: AGENTS.md  Cargo.toml  README.md
websockets/examples/: README.md  connection_management.rs  native_connect_and_receive.rs  request_response_correlation.rs
websockets/src/: builder.rs  client.rs  connection.rs  events.rs  lib.rs  message.rs  native.rs  wasm.rs
webui/: Cargo.toml
webui/src/: main.rs
(+2792 files in other folders)
