[workspace]
resolver = "2"
members = [
    "venues",
    "websockets",
    "rest"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Ross Saunders"]
license = "MIT"
repository = "https://github.com/rosssaunders/ccrxt"
description = "Rust wrappers around crypto exchanges"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.47.0", features = ["full"] }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.141"
serde_urlencoded = "0.7"

# Error handling
thiserror = "2.0.12"
anyhow = "1.0"

# HTTP client
reqwest = { version = "0.12.22", features = ["json", "native-tls"] }

# Crypto and auth
hmac = "0.12"
sha2 = "0.10.9"
hex = "0.4"

# Utilities
chrono = { version = "0.4.41", features = ["serde"] }
url = "2.4"
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12.4"
rust_decimal = { version = "1.37.2", features = ["serde"] }
clap = { version = "4.5.42", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# New dependencies
ratatui = "0.29.0"
crossterm = "0.29.0"

# Build configuration
[package]
name = "ccrxt"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
venues = { path = "venues" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait.workspace = true

[dev-dependencies]
rest = { path = "rest" }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0.104", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.95"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
# Critical lints for financial applications - these break builds
unwrap_used = "deny"                    # No unwrap() - could panic in production
expect_used = "warn"                    # Discourage expect() - prefer proper error handling
panic = "deny"                          # No panic!() - crashes are unacceptable
todo = "deny"                           # No TODO in production code
unimplemented = "deny"                  # No unimplemented!() in production
indexing_slicing = "deny"               # No direct indexing - could panic
arithmetic_side_effects = "warn"        # Be careful with integer overflow in financial calculations
float_arithmetic = "warn"               # Be careful with float precision in financial calculations
