[workspace]
resolver = "2"
members = [
    "venues",
    "websockets",
    "rest",
    "secrets"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Ross Saunders"]
license = "MIT"
repository = "https://github.com/rosssaunders/ccrxt"
description = "Rust wrappers around crypto exchanges"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-native-roots"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
serde_urlencoded = "0.7"

# Error handling
thiserror = "2.0.14"
anyhow = "1.0.99"

# HTTP client
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }

# Crypto and auth
hmac = "0.12"
sha2 = "0.10.9"
hex = "0.4"

# Utilities
chrono = { version = "0.4.41", features = ["serde"] }
url = "2.4"
futures = "0.3"
async-trait = "0.1"
parking_lot = "0.12.4"
rust_decimal = { version = "1.37.2", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3.20"

# New dependencies
ratatui = "0.29.0"

# Build configuration
[package]
name = "ccrxt"
version = "0.1.0"
edition = "2024"
license.workspace = true
rust-version = "1.89" # Track current latest stable; bump promptly after each release

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
venues = { path = "venues" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait.workspace = true
ring = "0.17.14"

[dev-dependencies]
rest = { path = "rest" }
secrets = { path = "secrets" }

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0.106", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0.97"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"              # Enforce handling of #[must_use] results

[workspace.lints.clippy]
# Critical lints for financial applications - these break builds
unwrap_used = "deny"                    # No unwrap() - could panic in production
expect_used = "deny"                    # Escalated: expect() now denied; use error propagation instead
panic = "deny"                          # No panic!() - crashes are unacceptable
todo = "deny"                           # No TODO in production code
unimplemented = "deny"                  # No unimplemented!() in production
indexing_slicing = "deny"               # No direct indexing - could panic
arithmetic_side_effects = "warn"        # Be careful with integer overflow in financial calculations
float_arithmetic = "warn"               # Be careful with float precision in financial calculations
