[package]
name = "ccrxt-python"
version = "0.1.0"
edition = "2021"

[lib]
name = "ccrxt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime"] }
tokio = { version = "1.0", features = ["full"] }
venues = { path = "../venues" }
websockets = { path = "../websockets" }
rest = { path = "../rest" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.37", features = ["serde"] }
thiserror = "2.0"
reqwest = { version = "0.12", features = ["json"] }

[build-dependencies]
pyo3-build-config = "0.20"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
