[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ccrxt"
version = "0.1.0"
description = "Python bindings for CCRXT - Rust cryptocurrency exchange API wrappers"
authors = [{ name = "Ross Saunders", email = "ross@example.com" }]
license = { text = "MIT" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries",
    "Topic :: Office/Business :: Financial",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

dependencies = ["asyncio", "typing-extensions"]

[project.urls]
Homepage = "https://github.com/rosssaunders/ccrxt"
Repository = "https://github.com/rosssaunders/ccrxt"
Documentation = "https://github.com/rosssaunders/ccrxt/docs"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
bindings = "pyo3"
