[package]
name = "rest"
version = "0.1.0"
edition = "2021"
description = "Common REST client traits and types for crypto exchange wrappers"
license = "MIT"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[lints]
workspace = true
