[package]
name = "rest"
version = "0.1.0"
edition = "2021"
description = "Common REST client traits and types for crypto exchange wrappers"
license = "MIT"

[dependencies]
async-trait = "0.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
secrecy = "0.10.3"

[lints]
workspace = true
