[package]
name = "rest"
version = "0.1.0"
edition = "2024"
description = "Common REST client traits and types for crypto exchange wrappers"
license = "MIT"

[features]
default = ["native"]
native = ["dep:reqwest", "dep:tokio"]

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
thiserror = "2.0.12"
secrecy = "0.10.3"

# Native dependencies
reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"], optional = true }
tokio = { version = "1.0", default-features = false, features = ["rt", "sync", "time", "macros"], optional = true }

[[example]]
name = "http_client_example"
required-features = ["native"]

[lints]
workspace = true
