[package]
name = "venues"
version = "0.1.0"
edition = "2024"

[features]
default = []
wasm = ["web-time"]

[dependencies]
# Internal dependencies
websockets = { path = "../websockets" }
rest = { path = "../rest" }

# External dependencies
anyhow = "1.0"
tokio = { version = "1.0", features = ["sync", "time", "macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_repr = "0.1"
reqwest = { version = "0.12.15", features = ["json"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "2.0.12"
parking_lot.workspace = true
tracing.workspace = true
ratatui = { workspace = true }
crossterm = { workspace = true }
rust_decimal.workspace = true
rust_decimal_macros = "1.36.0"
dotenv = "0.15"
clap.workspace = true
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.9.1"
once_cell = "1.0"
nonzero_ext = "0.3"
uuid = { version = "1.0", features = ["v4"] }
url.workspace = true
num_enum = "0.7.3"
secrecy = "0.10.3"
urlencoding = "2.1"
strum = "0.27.1"
strum_macros = "0.27.1"

# WASM compatibility
web-time = { version = "1.0", optional = true }

[lints]
workspace = true

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
