[package]
name = "venues"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
# Internal dependencies
websockets = { path = "../websockets" }
rest = { path = "../rest" }

# External dependencies
anyhow = "1.0"
tokio = { version = "1.0", features = [
    "sync",
    "time",
    "macros",
    "rt-multi-thread",
] }
tokio-tungstenite = { version = "0.27.0", features = ["native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
serde_repr = "0.1"
reqwest = { version = "0.12.15", default-features = false, features = [
    "json",
    "rustls-tls",
] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "2.0.12"
parking_lot.workspace = true
tracing.workspace = true
ratatui = { workspace = true }
# Align crossterm with ratatui's transitive dependency to avoid duplicates
crossterm = "0.29.0"
rust_decimal.workspace = true
rust_decimal_macros = "1.36.0"
clap.workspace = true
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.9.1"
governor = "0.10.0"
nonzero_ext = "0.3"
uuid = { version = "1.0", features = ["v4"] }
url.workspace = true
num_enum = "0.7.3"
secrecy = "0.10.3"
urlencoding = "2.1"
strum = "0.27.2"
strum_macros = "0.27.2"
ring = "0.17.14"

[features]
default = ["native"]
native = ["tokio/rt-multi-thread", "tokio/sync"]
wasm = ["dep:wasm-bindgen", "dep:web-sys", "dep:js-sys"]

# WASM-specific dependencies
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "console",
  "Window",
  "Performance",
  "Storage",
  "Document",
] }
js-sys = { version = "0.3", optional = true }

[lints]
workspace = true

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { workspace = true }
