[package]
name = "websockets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[features]
default = ["native"]
native = ["tokio", "tokio-tungstenite", "tokio-stream"]
wasm = ["web-sys", "wasm-bindgen", "wasm-bindgen-futures", "js-sys"]

[dependencies]
async-trait.workspace = true
futures.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
tokio-stream = { version = "0.1", optional = true, features = ["sync"] }

# WASM dependencies
web-sys = { version = "0.3", optional = true, features = [
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "BinaryType",
] }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

[[example]]
name = "connection_management"
required-features = ["native"]

[lints]
workspace = true
