[package]
name = "websockets"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
async-trait.workspace = true
futures.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
bytes = "1"

[lints]
workspace = true

[dev-dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
rustls = { version = "0.23", features = ["ring"] }
proptest = "1"
