[package]
name = "tui_orderbook"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tui_orderbook"
path = "src/tui_orderbook.rs"

[dependencies]
futures.workspace = true
tokio.workspace = true
orderbook = { path = "../../orderbook" }
venues = { path = "../../venues" }
mapper = { path = "../../mapper" }

ratatui = "0.29.0"
crossterm = "0.28.1"