[package]
name = "binancecoinm-example"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "binancecoinm"
path = "src/main.rs"

[dependencies]
venues = { path = "../.." }
binance_macros = { path = "../../../binance_macros" }
tokio = { version = "1.36", features = ["full"] }
dotenv = "0.15"
chrono = "0.4"
secrecy = "0.10.3"
rest = { path = "../../../rest" }
pagination = { path = "../../../pagination" }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.12"
tabled = { version = "0.19.0", features = ["derive"] } 
