[package]
name = "binanceoption-example"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "binanceoption"
path = "src/main.rs"

[dependencies]
venues = { path = "../../" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = "1.0"

[lints]
workspace = true