[package]
name = "kucoin-example"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "public_api_example"
path = "public_api_example.rs"

[[bin]]
name = "private_api_example"
path = "private_api_example.rs"

[[bin]]
name = "simple_private_example"
path = "simple_private_example.rs"

[[bin]]
name = "test_private"
path = "test_private.rs"

[dependencies]
venues = { path = "../.." }
tokio = { version = "1.36", features = ["full"] }
chrono = "0.4"
secrecy = "0.10.3"
rest = { path = "../../../rest" }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0.12"
reqwest = { version = "0.12.15", features = ["json"] }
